# page_analyzer_python

./: .env  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: my-check.yml
page_analyzer/: app.py  exceptions.py  repository.py  url_repo.py  utils.py
page_analyzer/templates/: base.html  index.html  index_urls.html  show_url.html
